JUnit fixes with comments